# koh2026-public

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.base  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml  start.sh
.github/workflows/: ci.yml
charts/koh/: Chart.yaml  values.yaml
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
maps/: Ascent.txt  Cache.txt  Dust2.txt  Inferno.txt  Mirage.txt  Split.txt  Sunset.txt
migrations/: env.py
migrations/versions/: 20260410_0001_initial_schema.py  20260412_0002_auto_round_mode.py  20260412_0003_site_config.py  20260412_0004_registration_invites.py  20260413_0005_map_templates.py  20260413_0006_map_pool_preferences.py  20260413_0007_submission_file_hash.py  20260413_0008_bp_global.py  20260413_0009_submission_round_optional.py  20260413_0010_promote_strategy_window_rounds.py  20260414_0011_phase_and_baseline.py  20260414_0012_site_announcement.py  20260414_0013_test_evaluation.py  20260414_0014_agent_telemetry.py  20260416_0015_model_baselines.py  20260417_0016_score_system.py  20260417_0017_auto_round_schedule.py  20260418_0018_user_display_name.py  20260419_0019_user_is_spectator.py
presentation/: package.json  pnpm-lock.yaml  slides.md
src/koh/: __main__.py  app.py  auto_round.py  cache.py  celery_worker.py  metrics.py  registration_invites.py  scoring.py  security.py  site_config.py
src/koh/api/: deps.py  (+1 more)
tests/: test_auto_round.py  test_metrics.py  test_scoring.py
tests/api/: test_admin.py  test_round_preview.py
(+60 files in other folders)
